<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('empleados', function (Blueprint $table) {
            $table->id();
            $table->foreignId('user_id')->unique()->constrained('users')->cascadeOnDelete();
            $table->string('legajo', 20)->unique();
            $table->string('dni', 15);
            $table->string('telefono', 30)->nullable();
            $table->date('fecha_ingreso');

            // Dato laboral. No reemplaza a users.activo, que gobierna el acceso:
            // un empleado dado de baja conserva su historial y sus reportes.
            $table->date('fecha_baja')->nullable();

            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('empleados');
    }
};
